# dbus-sharp

./: .gitignore  AUTHORS  Makefile  Makefile.am  NDesk.DBus.sln  README  autogen.sh  configure.ac  dbus-sharp-1.0.pc.in  dbus-sharp-2.0.pc.in  dbus-sharp.sln  dbus-sharp.snk  include.mk  index.html  ndesk-dbus-1.0.pc.in  style.css
examples/: Makefile  Makefile.am  Notifications.cs  Test.cs  TestExceptions.cs  TestExport.cs  TestExportInterface.cs  TestNotifications.cs  TestObjects.cs  TestRental.cs  TestSample.cs  TestServer.cs  TestServerNative.cs  TestServerTcp.cs  UnixFDClient.cs  UnixFDInterface.cs  UnixFDService.cs
fonts/: DroidSans-webfont.eot
src/: Address.cs  Authentication.cs  Bus.cs  BusException.cs  BusObject.cs  Connection.cs  DBus.cs  DisposableList.cs  ExportObject.cs  Introspection.cs  Makefile.am  Mapper.cs  OSHelpers.cs  ReflectionExtensions.cs  TypeImplementer.cs  Unix.cs  UnixFD.cs  daemon.mk  dbus-daemon.csproj  dbus-sharp.csproj
src/Protocol/: DType.cs  FieldCode.cs  Message.cs  MessageContainer.cs  MessageReader.cs  MessageWriter.cs  PendingCall.cs  ProtocolInformation.cs  Signature.cs  SocketTransport.cs  Transport.cs  UnixFDArray.cs
src/Transports/: UnixNativeTransport.cs  UnixSendmsgTransport.cs  UnixTransport.cs
src/Unix/: UnixMonoStream.cs
tests/: AddressTest.cs  AuthenticationTest.cs  BusTests.cs  DBusTests.cs  ExportInterfaceTest.cs  IntrospectorTest.cs  Makefile  Makefile.am  MatchRuleTest.cs  MessageReaderTest.cs  MessageWriterTest.cs  ObjectPathTest.cs  RenamedInterfaceTest.cs  SignatureTest.cs  dbus-sharp-tests.csproj
tools/: Introspect.cs  Makefile  Makefile.am  Monitor.cs  UuidGen.cs  dbus-monitor.csproj  tools.mk
